--- a/config/locales/widgets/es.names.yml
+++ b/config/locales/widgets/es.names.yml
@@ -1,27 +1,27 @@
-en:
+es:
   widgets:
     names:
-      about-us: "De Nosotros"
-      blog: "Blog"
-      booking-request: "Booking Request"
-      business-hours: "Business Hours"
-      call-me-back: "Call Me Back"
-      call-us: "Call Us"
-      category: "Category"
-      coupon: "Coupon"
-      custom-page: "Custom Page"
-      event-calendar: "Event Calendar"
-      facebook: "Facebook"
-      find-us: "Find Us"
-      flickr: "Flickr"
-      full-website: "Full Website"
-      keep-me-informed: "Keep Me Informed"
-      leave-a-message: "Leave a Message"
-      link: "Link"
-      locations: "Locations"
-      menu: "Menu"
-      products: "Products / Services"
-      property-listings: "Property Listings"
-      rss-feed: "RSS Feed"
-      tell-a-friend: "Tell a Friend"
-      twitter: "Twitter"
+      about-us: "@@@@About Us"
+      blog: "@@@@Blog"
+      booking-request: "@@@@Booking Request"
+      business-hours: "@@@@Business Hours"
+      call-me-back: "@@@@Call Me Back"
+      call-us: "@@@@Call Us"
+      category: "@@@@Category"
+      coupon: "@@@@Coupon"
+      custom-page: "@@@@Custom Page"
+      event-calendar: "@@@@Event Calendar"
+      facebook: "@@@@Facebook"
+      find-us: "@@@@Find Us"
+      flickr: "@@@@Flickr"
+      full-website: "@@@@Full Website"
+      keep-me-informed: "@@@@Keep Me Informed"
+      leave-a-message: "@@@@Leave a Message"
+      link: "@@@@Link"
+      locations: "@@@@Locations"
+      menu: "@@@@Menu"
+      products: "@@@@Products / Services"
+      property-listings: "@@@@Property Listings"
+      rss-feed: "@@@@RSS Feed"
+      tell-a-friend: "@@@@Tell a Friend"
+      twitter: "@@@@Twitter"
