Removed random-page from widget_maps.yml and updated en.names.yml to remove flickr and add reviews

--- a/config/locales/widgets/en.names.yml
+++ b/config/locales/widgets/en.names.yml
@@ -13,7 +13,6 @@ en:
       event-calendar: "Event Calendar"
       facebook: "Facebook"
       find-us: "Find Us"
-      flickr: "Flickr"
       full-website: "Full Website"
       keep-me-informed: "Keep Me Informed"
       leave-a-message: "Leave a Message"
@@ -22,6 +21,7 @@ en:
       menu: "Menu"
       products: "Products / Services"
       property-listings: "Property Listings"
+      reviews: "Reviews"
       rss-feed: "RSS Feed"
       tell-a-friend: "Tell a Friend"
       twitter: "Twitter"
