--- a/config/locales/widgets/es.icons.yml
+++ b/config/locales/widgets/es.icons.yml
@@ -1,7 +1,7 @@
 es:
   widgets:
     icons:
-      sep-general: General
+      sep-general: elGeneral
       about-us: Información
       call-us: Llamar
       business-hours: Horario
