i18n: Fixed _templates.slim

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,7 +54,7 @@ en:
     create: "Create"
 
     delete_widget: "Are you sure you want to delete this widget?\n(all data will be lost)"
-
+  
     category:
       delete_node: "Are you sure you want to delete? (Data will be lost)"
       delete_nothing: "Please select an item to delete."
@@ -120,6 +120,9 @@ en:
 
     builder_app:
       unsavedChangesText: "You have unsaved changes. Click OK to go back and save changes. Click Cancel to discard your changes."
+      invalid_widget: "This widget will <b>NOT</b> appear on your mobile site because required information is missing.<br /><br />Please click on this widget to edit. Remember to <b>Save Changes</b> when you are done."
+      deactivated_widget: "You have deactivated this widget; it <b>WILL NOT</b> appear on your mobile site.<br /><br />To undo this, please click this widget and uncheck the \"Deactivate\" checkbox."
+ 
 
     site_manager:
       default_error: "We're sorry, something went wrong."
