--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,15 @@ en:
     click_here_start: "Click here"
     click_here_middle: "click here"
 
+  days:
+    Sunday: "Sunday"
+    Monday: "Monday"
+    Tuesday: "Tuesday"
+    Wednesday: "Wednesday"
+    Thursday: "Thursday"
+    Friday: "Friday"
+    Saturday: "Saturday"
+
   homepage:
     welcome: "Welcome to YoMobi"
     message: 'Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.'
@@ -54,7 +63,11 @@ en:
     create: "Create"
 
     delete_widget: "Are you sure you want to delete this widget?\n(all data will be lost)"
-  
+
+    wysiwyg:
+      add_picture: "Add a Picture"
+      add_video: "Add a Video"
+
     category:
       delete_node: "Are you sure you want to delete? (Data will be lost)"
       delete_nothing: "Please select an item to delete."
@@ -76,43 +89,6 @@ en:
 
       error:
         photo_upload_failed: "Photo upload failed (%{error_msg})"
-
-    page_editor:
-      tooltip:
-        add_picture: "Add a Picture"
-        add_video: "Add a Video"
-        bold: "Bold"
-        copy: "Copy"
-        code: "Code snippet"
-        css_wrap: "CSS Wrapper"
-        cut: "Cut"
-        h1: "Header 1"
-        h2: "Header 2"
-        h3: "Header 3"
-        hr_line: "Insert Horizontal Rule"
-        indent: "Indent"
-        insert_image: "Insert Image"
-        insert_ol: "Insert Ordered List"
-        insert_ul: "Insert Unordered List"
-        insert_table: "Insert Table"
-        italic: "Italic"
-        justify_center: "Justify Center"
-        justify_left: "Justify Left"
-        justify_right: "Justify Right"
-        increase_font: "Increase font size"
-        link: "Create a Link"
-        ltr: "Left to Right"
-        rtl: "Right to Left"
-        outdent: "Outdent"
-        paragraphc: "Paragraph"
-        paste: "Paste"
-        redo: "Redo"
-        subscript: "Subscript"
-        superscript: "Superscript"
-        underline: "Underline"
-        undo: "Undo"
-        view_source: "View source code"
-
 
     side_bar:
       singletonInUseTooltip: "You may only use <b>one</b> of this type of widget at a time.<br/><br/>This widget is already in your YoMobi mobile website."
