--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -5,7 +5,16 @@ es:
   general:
     click_here_start: "@@Click here"
     click_here_middle: "@@click here"
- 
+
+  days:
+    Sunday: "@@Sunday"
+    Monday: "@@Monday"
+    Tuesday: "@@Tuesday"
+    Wednesday: "@@Wednesday"
+    Thursday: "@@Thursday"
+    Friday: "@@Friday"
+    Saturday: "@@Saturday"
+
   homepage:
     welcome: "@@Welcome to YoMobi"
     message: '@@Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.'
@@ -55,6 +64,10 @@ es:
 
     delete_widget: "@@Are you sure you want to delete this widget?\n(all data will be lost)"
 
+    wysiwyg:
+      add_picture: "Add a Picture"
+      add_video: "Add a Video"
+
     category:
       delete_node: "@@Are you sure you want to delete? (Data will be lost)"
       delete_nothing: "@@Please select an item to delete."
@@ -76,42 +89,6 @@ es:
 
       error:
         photo_upload_failed: "Photo upload failed (%{error_msg})"
-
-    page_editor:
-      tooltip:
-        add_picture: "@@Add a Picture"
-        add_video: "@@Add a Video"
-        bold: "@@Bold"
-        copy: "@@Copy"
-        code: "@@Code snippet"
-        css_wrap: "@@CSS Wrapper"
-        cut: "@@Cut"
-        h1: "@@Header 1"
-        h2: "@@Header 2"
-        h3: "@@Header 3"
-        hr_line: "@@Insert Horizontal Rule"
-        indent: "@@Indent"
-        insert_image: "@@Insert Image"
-        insert_ol: "@@Insert Ordered List"
-        insert_ul: "@@Insert Unordered List"
-        insert_table: "@@Insert Table"
-        italic: "@@Italic"
-        justify_center: "@@Justify Center"
-        justify_left: "@@Justify Left"
-        justify_right: "@@Justify Right"
-        increase_font: "@@Increase font size"
-        link: "@@Create a Link"
-        ltr: "@@Left to Right"
-        rtl: "@@Right to Left"
-        outdent: "@@Outdent"
-        paragraphc: "@@Paragraph"
-        paste: "@@Paste"
-        redo: "@@Redo"
-        subscript: "@@Subscript"
-        superscript: "@@Superscript"
-        underline: "@@Underline"
-        undo: "@@Undo"
-        view_source: "@@View source code"
 
     side_bar:
       singletonInUseTooltip: "@@You may only use <b>one</b> of this type of widget at a time.<br/><br/>This widget is already in your YoMobi mobile website."
@@ -643,3 +620,73 @@ es:
     widget_icons:
       call: "@@Call"
       information: "@@Information"
+
+  jwysiwyg:
+    controls:
+      "Bold": "Negrilla"
+      "Colorpicker": ""
+      "Copy": "Copiar"
+      "Create link": "Crear Link"
+      "Cut": "Cortar"
+      "Decrease font size": "Disminuir tamaÃ±o fuente"
+      "Fullscreen": ""
+      "Header 1": "Titulo 1"
+      "Header 2": "Titulo 2"
+      "Header 3": "Titulo 3"
+      "View source code": "Ver fuente"
+      "Increase font size": "Aumentar tamaÃ±o fuente"
+      "Indent": "Agregar SangrÃ­a"
+      "Insert Horizontal Rule": "Insertar linea horizontal"
+      "Insert image": "Insertar Imagen"
+      "Insert Ordered List": "Insertar lista numÃ©rica"
+      "Insert table": "Insertar Tabla"
+      "Insert Unordered List": "Insertar Lista viÃ±etas"
+      "Italic": "Cursiva"
+      "Justify Center": "Centrar"
+      "Justify Full": "Justificar"
+      "Justify Left": "Alinear a la Izquierda"
+      "Justify Right": "Alinear a la derecha"
+      "Left to Right": "Izquierda a derecha"
+      "Outdent": "Quitar SangrÃ­a"
+      "Paste": "Pegar"
+      "Redo": "Restaurar"
+      "Remove formatting": "Quitar Formato"
+      "Right to Left": "Derecha a izquierda"
+      "Strike-through": "Invertir"
+      "Subscript": "SubÃ­ndice"
+      "Superscript": "SuperÃ­ndice"
+      "Underline": "Subrayar"
+      "Undo": "Deshacer"
+
+    dialogs:
+      "Apply": ""
+      "Cancel": ""
+
+      colorpicker:
+        "Colorpicker": ""
+        "Color": ""
+
+      image:
+        "Insert Image": ""
+        "Preview": ""
+        "URL": ""
+        "Title": ""
+        "Description": ""
+        "Width": ""
+        "Height": ""
+        "Original W x H": ""
+        "Float": ""
+        "None": ""
+        "Left": ""
+        "Right": ""
+
+      link:
+        "Insert Link": ""
+        "Link URL": ""
+        "Link Title": ""
+        "Link Target": ""
+
+      table:
+        "Insert table": ""
+        "Count of columns": ""
+        "Count of rows": ""
