--- a/config/locales/widgets/es.names.yml
+++ b/config/locales/widgets/es.names.yml
@@ -1,27 +1,27 @@
 es:
   widgets:
     names:
-      about-us: "@@About Us"
-      blog: "@@Blog"
-      booking-request: "@@Booking Request"
-      business-hours: "@@Business Hours"
-      call-me-back: "@@Call Me Back"
-      call-us: "@@Call Us"
-      category: "@@Category"
-      coupon: "@@Coupon"
-      custom-page: "@@Custom Page"
-      event-calendar: "@@Event Calendar"
-      facebook: "@@Facebook"
-      find-us: "@@Find Us"
-      flickr: "@@Flickr"
-      full-website: "@@Full Website"
-      keep-me-informed: "@@Keep Me Informed"
-      leave-a-message: "@@Leave a Message"
-      link: "@@Link"
-      locations: "@@Locations"
-      menu: "@@Menu"
-      products: "@@Products / Services"
-      property-listings: "@@Property Listings"
-      rss-feed: "@@RSS Feed"
-      tell-a-friend: "@@Tell a Friend"
-      twitter: "@@Twitter"
+      about-us: "Quienes Somos"
+      blog: "Blog"
+      booking-request: "Agregar en Agenda"
+      business-hours: "Horas Hábiles"
+      call-me-back: "Responde Mi Llamada"
+      call-us: "Llámanos"
+      category: "Categoría"
+      coupon: "Cupón"
+      custom-page: "Página Personalizada"
+      event-calendar: "Calendario de Eventos"
+      facebook: "Facebook"
+      find-us: "Encuéntranos"
+      full-website: "Sitio Web Completo"
+      keep-me-informed: "Mantenerme informado"
+      leave-a-message: "Deja un Mensaje"
+      link: "Enlace"
+      locations: "Ubicaciones"
+      menu: "Menú"
+      products: "Productos / Servicios"
+      property-listings: "Avisos de Inmuebles"
+      reviews: "Revisiones"
+      rss-feed: "Suscripción RSS"
+      tell-a-friend: "Comentar Con Un Amigo"
+      twitter: "Twitter"
