--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -65,8 +65,8 @@ es:
     delete_widget: "@@Are you sure you want to delete this widget?\n(all data will be lost)"
 
     wysiwyg:
-      add_picture: "Add a Picture"
-      add_video: "Add a Video"
+      add_picture: "@@Add a Picture"
+      add_video: "@@Add a Video"
 
     category:
       delete_node: "@@Are you sure you want to delete? (Data will be lost)"
