--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -282,6 +282,29 @@ en:
       edit_tab_bar: "Edit Mobile Tab Bar"
       mobile_site_builder: "Mobile Site Builder"
 
+    email_panel:
+      title: "Email your Followers"
+      num_followers: "You have %{num} email follower(s)."
+      reply_to_address: "Your REPLY-TO email address is: %{email}"
+      subject: "Subject"
+      content: "Content"
+      send: "Send Email"
+      sending: "Sending. Please wait..."
+      missing_info: "Please enter both a subject and message."
+      success: "Email successfully sent."  
+
+    text_panel:
+      title: "Text Message your Followers"
+      num_followers: "You have %{num} text follower(s)."
+      reply_to_address: "Your REPLY-TO email address is: %{email}"
+      chars_remaining: " of %{max} charaters remaining."
+      send: "Send Text"
+      sending: "Sending. Please wait..."
+      error: "Error: %{errors}"
+      missing_info: "Please enter a message."
+      msg_too_long: "Message is too long. It must be less than %{max} characters."
+      success: "Texts successfully sent."
+
     general_settings:
       title: "General Settings"
       explanation: "<p>Edit general settings.</p>"
@@ -306,6 +329,9 @@ en:
       redirect_code_help: "To automatically redirect visitors to your mobile site when they visit your desktop site from a mobile phone, copy this code snippet and paste it into your desktop site’s home page, just before the closing &lt;head&gt; tag. <b>Click ? more help.</b>"
       keywords: "Enter keywords that describe your website, separated by commas:"
       save: "Save Settings"    
+
+    edit_tab_bar:
+      explanation: "Select the pages you want to be most visible to your mobile visitors."
 
     jeditor:
       help:
