--- a/config/locales/widgets/en.types.yml
+++ b/config/locales/widgets/en.types.yml
@@ -1,6 +1,7 @@
 en:
   widgets:
     types:
+      "Airport": "Airport"
       "Arts / Entertainment / Nightlife": "Arts / Entertainment / Nightlife"
       "Attractions / Things to Do": "Attractions / Things to Do"
       "Automotive": "Automotive"
